# NHLBI-BDC-DMC-HV

./: CONTRIBUTING.md  README.md  VARIABLE_DOCUMENTATION.md  generate_variable_documentation.py  pyproject.toml  trans_spec_changes.md  validate_ingest_yamls.py
.github/workflows/: validate_ingest_yamls.yml
priority_variables_transform/: README.md  albumin_urine.yaml  alt_sgpt.yaml  angina.yaml  ast_sgot.yaml  asthma.yaml  bdy_hgt.yaml  bdy_wgt.yaml  bilirubin_tot.yaml  bld_pressure.yaml  bmi.yaml  bnp.yaml  cac_score.yaml  carotid_sten.yaml  carotid_sten_left.yaml  carotid_sten_right.yaml  cause_of_death.yaml  cesd_score.yaml  cig_smok.yaml  creat_bld.yaml  creat_urin.yaml  crp.yaml  cvd.yaml  death_stat.yaml  diabetes.yaml  eosinophil_ncnc_bld.yaml  ethnicity.yaml  factor_7.yaml  fast_gluc_bld.yaml  fast_lipids.yaml  fev1.yaml  fibrinogen.yaml  fruit_serving.yaml  fvc.yaml  glucose_bld.yaml  hdl.yaml  hematocrit.yaml  hemo.yaml  hemo_a1c.yaml  hip_circ.yaml  (+5 more)
priority_variables_transform/ARIC/: afib.yaml  angina.yaml  (+38 more)
priority_variables_transform/ARIC-ingest/: asthma.yaml  cause_of_death.yaml  cig_smok.yaml  copd.yaml  demography.yaml  hist_my_inf.yaml  obesity.yaml  stroke.yaml  tak_aceinhib.yaml  tak_alphablk.yaml  tak_angiorecepblk.yaml  tak_betablk.yaml  tak_calchanblk.yaml  tak_diuret.yaml  tak_med_diab.yaml  tak_statin.yaml  tak_vasodil.yaml
transform_assessment/: CLAUDE.OLD.md  CLAUDE.md  README.md  preharmonized_data_report.csv  preharmonized_qaqc_report.csv  preharmonized_qaqc_report.py
varIABLE_DOCUMENTATION/: CLAUDE.md  generate_variable_documentation.py
(+2117 files in other folders)
